# algoHawkes

./: .gitignore  CMakeLists.txt  README.md  config.json  imgui.ini  resultAnalyser.ipynb  vcpkg.json
config/: algoconfig.cfg
imgui/: imgui_demo.cpp
python/: GenericWebsocket.py  HFTEngine.py  calibration.py  hawkes_model.py
src/: data_simulation.cpp  data_simulation.h  genericWS.cpp  genericWS.h  hawkesWorker.cpp  hawkesWorker.h  main.cpp  scheduler.cpp  scheduler.h  struct.h  tools.h
src/calibration/: calibration.cpp  calibration.h
src/calibration/hawkes_model/: main  test_ogata
src/calibration/hawkes_model/include/: ogata_thinning_algo.h  optimization.h  struct.h
src/calibration/hawkes_model/src/: main_hawkes.c  ogata_thinning_algo.c  optimization.c
src/frontend/: UIBuffers.h  user_interface.cpp  user_interface.h
